# BRM

./: .isort.cfg  .pre-commit-config.yaml  LICENSE.txt  MANIFEST.in  README.md  brm.py  example.py  pyproject.toml  setup.cfg  setup.py  test.py  test.pym  visualize.py  vrm.py
.github/workflows/: main.yml  publish.yml  test.yml
docs/: conf.py  index.rst
docs/tutorial/: start.rst
examples/: number_listener.py  remove_imports.py  visualize.py
experiment/: vrm.py
static/: brm.embed  brm.pth
tests/: test_brm.py
