[metadata]
name = brm
version = 0.1.0a0
url = https://github.com/isidentical/brm
author = isidentical
author_email = isidentical@gmail.com
description = Bicycle Repair Man - Rewrite Python Sources 
long_description = file: README.md
long_description_content_type = text/markdown

[options]
py_modules = brm
python_requires = >=3.7

[options.packages.find]
exclude =
    tests*

[bdist_wheel]
universal = True
