[metadata]
name = brm
version = 0.1.0
url = https://github.com/isidentical/brm
author = isidentical
author_email = isidentical@gmail.com
description = Bicycle Repair Man - Rewrite Python Sources 
long_description = file: README.md
long_description_content_type = text/markdown
license-file = LICENSE.txt

[options]
py_modules = brm
python_requires = >=3.6

[options.packages.find]
exclude =
    tests*

[bdist_wheel]
universal = True
