[metadata]
name = brm
version = 0.3.0
description = Bicycle Repair Man - Rewrite Python Sources
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/isidentical/brm
author = isidentical
author_email = isidentical@gmail.com
license = MIT
license_file = LICENSE.txt
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
py_modules = brm
python_requires = >=3.6

[options.packages.find]
exclude =
    tests*

[bdist_wheel]
universal = True
